# categorized-heb-g2p-benchmark

./: .gitignore  pyproject.toml
data/: benchmark_results.csv  benchmark_results_with_gemini_initial_glottal_normalized.csv  benchmark_results_with_gemini_ipa_normalized.csv  benchmark_results_with_gemini_regular_rerun.csv  gt.csv  gt_gemini.csv  gt_ilspeech_v2_test_text_only.txt  predictions.csv
src/: benchmark.py  check_word_index_suspicion_cer.py  plot_ggradar_style.py  predict.py  sync_gt_gemini_indices.py  sync_ilspeech_v2_gt.py
